[gd_scene load_steps=42 format=3 uid="uid://ct8atq5ie1tcq"]

[ext_resource type="Script" uid="uid://cwnqljxu32ao4" path="res://Assets/Scenes/Object/Player/Player.gd" id="1"]
[ext_resource type="SpriteFrames" uid="uid://00v2irdsbw31" path="res://Assets/Character/Mario/Mario.tres" id="2_nrta0"]
[ext_resource type="AudioStream" uid="uid://xjl85pqq2xms" path="res://Assets/Audio/smbdx_jump1.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://db82oav1w4c6i" path="res://Assets/Audio/smbdx_jump2.wav" id="4"]
[ext_resource type="PackedScene" uid="uid://cf7tk4o22ru6j" path="res://Assets/Scenes/Boxes/Hitbox.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://lgrpd2eb32ud" path="res://Assets/Scenes/Boxes/Hurtbox.tscn" id="6"]
[ext_resource type="AudioStream" uid="uid://bown2rotx5iyo" path="res://Assets/Audio/mid-air spin.mp3" id="7"]
[ext_resource type="AudioStream" uid="uid://bidtlrr0p6cc8" path="res://Assets/Audio/grond pound.mp3" id="8"]
[ext_resource type="AudioStream" uid="uid://wg538u2hyc8v" path="res://Assets/Audio/smbdx_bullet.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://ciwx0xrx64kya" path="res://Assets/Audio/on_celiing.wav" id="10"]
[ext_resource type="AudioStream" uid="uid://c73axiq8hcuoc" path="res://Assets/Audio/smbdx_stomp.wav" id="11"]
[ext_resource type="AudioStream" uid="uid://rcct3a07he5x" path="res://Assets/Audio/smbdx_skid.wav" id="12"]
[ext_resource type="AudioStream" uid="uid://bksnxtm4jn5kg" path="res://Assets/Audio/smbdx_warp.wav" id="13"]
[ext_resource type="PackedScene" uid="uid://csr11bckiso12" path="res://Assets/Scenes/Object/Player/Skill.tscn" id="14_taixk"]
[ext_resource type="PackedScene" uid="uid://c6ybwiutkco82" path="res://Assets/Scenes/Object/Boxes/prop_box.tscn" id="15_7namt"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_h58o3"]
polygon = PackedVector2Array(-4, -13, -4, 0, 4, 0, 4, -13)

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="3"]
resource_name = "airspin"
length = 0.15
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [13, 14, 15]
}

[sub_resource type="Animation" id="38"]
resource_name = "brake"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="40"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="53"]
resource_name = "fire"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}

[sub_resource type="Animation" id="Animation_agppi"]
resource_name = "flag"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [17, 18]
}

[sub_resource type="Animation" id="4"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="5"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="47"]
resource_name = "sit"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.35),
"transitions": PackedFloat32Array(0.5, 2, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 0.96), Vector2(0.85, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="44"]
resource_name = "slide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="19"]
resource_name = "spin_jump"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 12, 13, 14]
}

[sub_resource type="Animation" id="42"]
resource_name = "squat"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="6"]
resource_name = "walk"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}

[sub_resource type="Animation" id="Animation_b3jie"]
resource_name = "walk_jump"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_etrwq"]
_data = {
&"RESET": SubResource("2"),
&"airspin": SubResource("3"),
&"brake": SubResource("38"),
&"fall": SubResource("40"),
&"fire": SubResource("53"),
&"flag": SubResource("Animation_agppi"),
&"idle": SubResource("4"),
&"jump": SubResource("5"),
&"sit": SubResource("47"),
&"slide": SubResource("44"),
&"spin_jump": SubResource("19"),
&"squat": SubResource("42"),
&"walk": SubResource("6"),
&"walk_jump": SubResource("Animation_b3jie")
}

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(10, 14)

[sub_resource type="RectangleShape2D" id="24"]
size = Vector2(11, 2.5)

[sub_resource type="Animation" id="48"]
length = 0.001

[sub_resource type="Animation" id="49"]
resource_name = "state"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6cpym"]
_data = {
&"RESET": SubResource("48"),
&"state": SubResource("49")
}

[sub_resource type="Animation" id="50"]
length = 0.001

[sub_resource type="Animation" id="51"]
resource_name = "wudi"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w5uai"]
_data = {
&"RESET": SubResource("50"),
&"wudi": SubResource("51")
}

[sub_resource type="RectangleShape2D" id="52"]
size = Vector2(10, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hruc4"]
size = Vector2(10, 1)

[node name="Player" type="CharacterBody2D"]
visibility_layer = 2
texture_filter = 1
collision_layer = 2
slide_on_ceiling = false
script = ExtResource("1")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
show_behind_parent = true
occluder = SubResource("OccluderPolygon2D_h58o3")
occluder_light_mask = 2

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_nrta0")
animation = &"Small"
speed_scale = 0.0
offset = Vector2(0, -7)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
deterministic = true
root_node = NodePath("../AnimatedSprite")
callback_mode_method = 1
libraries = {
&"": SubResource("AnimationLibrary_etrwq")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("1")

[node name="Hitbox" parent="." instance=ExtResource("5")]
collision_layer = 128
collision_mask = 64

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("24")

[node name="Hurtbox" parent="." instance=ExtResource("6")]
position = Vector2(0, -2)
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2(0, -5.5)

[node name="Audios" type="Node2D" parent="."]

[node name="SmallJumpAudio" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("3")

[node name="BigJumpAudio" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("4")

[node name="AirSpinAudio" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("7")

[node name="SitSpinAdudio" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("8")

[node name="SitAdudio" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("9")

[node name="CeilingAudio" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("10")
volume_db = 5.0

[node name="HitAudio" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("11")

[node name="BrakeAudio" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("12")

[node name="HurtAudio" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource("13")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_6cpym")
}

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_w5uai")
}

[node name="DeadBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadBox"]
visible = false
position = Vector2(0, -9)
shape = SubResource("52")

[node name="WallCheck" type="Node2D" parent="."]
visible = false

[node name="Left" type="RayCast2D" parent="WallCheck"]
position = Vector2(0, -6)
target_position = Vector2(-6, 0)

[node name="Right" type="RayCast2D" parent="WallCheck"]
position = Vector2(0, -6)
target_position = Vector2(6, 0)

[node name="Skill" parent="." instance=ExtResource("14_taixk")]
position = Vector2(0, -8)

[node name="PropBox" parent="." instance=ExtResource("15_7namt")]
monitorable = false

[node name="CollisionShape2D" parent="PropBox" index="0"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_hruc4")

[connection signal="hit" from="Hitbox" to="." method="_on_Hitbox_hit"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="area_entered" from="DeadBox" to="." method="_on_DeadBox_area_entered"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
[editable path="PropBox"]
